--- a/ronet/msvc2009/ronet.vcproj
+++ b/ronet/msvc2009/ronet.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(ProjectDir)\..\include\"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)\..\include\&quot;;&quot;$(SolutionDir)\..\logsys\include\&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -106,7 +106,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="$(ProjectDir)\..\include\"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)\..\include\&quot;;&quot;$(SolutionDir)\..\logsys\include\&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -167,7 +167,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(ProjectDir)\..\include\"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)\..\include\&quot;;&quot;$(SolutionDir)\..\logsys\include\&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;RONET_DLL"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -244,7 +244,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="$(ProjectDir)\..\include\"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)\..\include\&quot;;&quot;$(SolutionDir)\..\logsys\include\&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;RONET_DLL"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -305,6 +305,10 @@
 			>
 			<File
 				RelativePath="..\connection.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\log.cc"
 				>
 			</File>
 			<File
@@ -495,6 +499,10 @@
 			</File>
 			<File
 				RelativePath="..\include\ronet\connection.h"
+				>
+			</File>
+			<File
+				RelativePath="..\include\log.h"
 				>
 			</File>
 			<File
