RONet now handles packet InventoryItems (0x00a4)

--- a/ronet/msvc2009/ronet.vcproj
+++ b/ronet/msvc2009/ronet.vcproj
@@ -431,6 +431,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\packets\pkt_inventoryitems.cc"
+					>
+				</File>
+				<File
 					RelativePath="..\packets\pkt_keepalive.cc"
 					>
 				</File>
@@ -618,6 +622,10 @@
 				</File>
 				<File
 					RelativePath="..\include\ronet\packets\pkt_guildmessage.h"
+					>
+				</File>
+				<File
+					RelativePath="..\include\ronet\packets\pkt_inventoryitems.h"
 					>
 				</File>
 				<File
