Improved drawing for spr Created a SprCache object for CacheManager FullAct now uses CacheManager.

--- a/sdl_engine/msvc/sdl_engine.vcproj
+++ b/sdl_engine/msvc/sdl_engine.vcproj
@@ -487,6 +487,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\include\sdle\structures.h"
+				>
+			</File>
+			<File
 				RelativePath="..\include\sdle\texture.h"
 				>
 			</File>
