Minor logsys improvements Fixed Makefile for ROint Created makefile for logsys RoInt now CAN use logsys. SPR can now dumps all its textures in a single file

--- a/logsys/msvc/logsys.vcproj
+++ b/logsys/msvc/logsys.vcproj
@@ -186,6 +186,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\include\logsys\logsys_macros.h"
+				>
+			</File>
+			<File
 				RelativePath="..\include\stdafx.h"
 				>
 			</File>
