Added some NPCs. Changed (somewhat) the way that the acts are drawn. Kinda worked for the NPCs, but it's messy for the characters. Still need to fix that.

--- a/roengine/msvc9/roengine.vcproj
+++ b/roengine/msvc9/roengine.vcproj
@@ -714,6 +714,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\objects\npcobj.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\objects\rsm_object.cc"
 				>
 			</File>
@@ -738,6 +742,10 @@
 				</File>
 				<File
 					RelativePath="..\include\roengine\objects\cube_object.h"
+					>
+				</File>
+				<File
+					RelativePath="..\include\roengine\objects\npcobj.h"
 					>
 				</File>
 				<File
