Created Loading Interface Structure TextureManager now checks for the file extension before loading (so it calls the right function). Default is still BMP. GUI objects now uses CacheManager instead of a lot of other Managers Application icon added for MSVC project.

--- a/openro/msvc/openro.vcproj
+++ b/openro/msvc/openro.vcproj
@@ -227,10 +227,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\resource.h"
-				>
-			</File>
-			<File
 				RelativePath="..\states.h"
 				>
 			</File>
@@ -245,7 +241,15 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
+				RelativePath=".\openro.ico"
+				>
+			</File>
+			<File
 				RelativePath=".\openro.rc"
+				>
+			</File>
+			<File
+				RelativePath=".\resource.h"
 				>
 			</File>
 		</Filter>
