--- a/ronet/msvc2009/ronet.vcproj
+++ b/ronet/msvc2009/ronet.vcproj
@@ -495,6 +495,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\packets\pkt_npccancel.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\packets\pkt_npccontinue.cc"
+					>
+				</File>
+				<File
 					RelativePath="..\packets\pkt_otherspeech.cc"
 					>
 				</File>
@@ -738,6 +746,14 @@
 				</File>
 				<File
 					RelativePath="..\include\ronet\packets\pkt_mapmoveok.h"
+					>
+				</File>
+				<File
+					RelativePath="..\include\ronet\packets\pkt_npccancel.h"
+					>
+				</File>
+				<File
+					RelativePath="..\include\ronet\packets\pkt_npccontinue.h"
 					>
 				</File>
 				<File
