Complete act file format.

--- a/roint/msvc2008/roint_static.vcproj
+++ b/roint/msvc2008/roint_static.vcproj
@@ -415,11 +415,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\include\ro\ro_object.h"
+				RelativePath="..\include\ro\ro_arr.h"
 				>
 			</File>
 			<File
-				RelativePath="..\include\ro\ro_seq.h"
+				RelativePath="..\include\ro\ro_object.h"
 				>
 			</File>
 			<File
