--- a/roint/msvc2008/roint.vcproj
+++ b/roint/msvc2008/roint.vcproj
@@ -720,11 +720,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\include\ro\ro_object.h"
+				RelativePath="..\include\ro\ro_arr.h"
 				>
 			</File>
 			<File
-				RelativePath="..\include\ro\ro_seq.h"
+				RelativePath="..\include\ro\ro_object.h"
 				>
 			</File>
 			<File
